--- a/analysis/pois_mean_log1exp.Rmd
+++ b/analysis/pois_mean_log1exp.Rmd
@@ -38,10 +38,11 @@ lines(lambda,col='grey50')
 legend('topleft',c('data','true mean'),pch=c(20,NA),lty=c(NA,1),col=c('grey80','grey50'))
 ```
 
-Point normal prior, mean = estimate
+
+## point-laplace prior, mean = estimate
 
 ```{r,warning=FALSE}
-out = pois_mean_log1exp(x,maxiter = 500,ebnm_params=list(mode='estimate',prior_family='point_normal'))
+out = pois_mean_log1exp(x,maxiter = 300,ebnm_params=list(mode='estimate',prior_family='point_laplace'))
 plot(out$obj,type='l',ylab='ELBO',xlab='iteration')
 
 plot(x,main='',col='grey80',pch=20)
@@ -54,10 +55,10 @@ out$kappa
 out$ebnm_res$fitted_g
 ```
 
-Point normal prior, mean = 0
+## point-laplace prior, mean = 0
 
 ```{r,warning=FALSE}
-out = pois_mean_log1exp(x,maxiter = 500,ebnm_params=list(mode=0,prior_family='point_normal'))
+out = pois_mean_log1exp(x,maxiter = 300,ebnm_params=list(mode=0,prior_family='point_laplace'))
 plot(out$obj,type='l',ylab='ELBO',xlab='iteration')
 
 plot(x,main='',col='grey80',pch=20)
@@ -66,10 +67,11 @@ legend('topleft',c('data','true mean','estimated mean'),pch=c(20,NA,NA),lty=c(NA
 ```
 
 ```{r}
+out$kappa
 out$ebnm_res$fitted_g
 ```
 
-ash prior, mean = estimate
+## ash prior, mean = estimate
 
 ```{r}
 out = pois_mean_log1exp(x,maxiter = 500,ebnm_params=list(mode='estimate',prior_family='normal_scale_mixture'))
@@ -86,7 +88,7 @@ out$ebnm_res$fitted_g
 ```
 
 
-ash prior, mean = 0
+## ash prior, mean = 0
 
 ```{r}
 out = pois_mean_log1exp(x,maxiter = 500,ebnm_params=list(mode=0,prior_family='normal_scale_mixture'))
@@ -102,4 +104,37 @@ legend('topleft',c('data','true mean','estimated mean'),pch=c(20,NA,NA),lty=c(NA
 out$ebnm_res$fitted_g
 ```
 
+
+## Point normal prior, mean = estimate
+
+```{r,warning=FALSE}
+out = pois_mean_log1exp(x,maxiter = 100,ebnm_params=list(mode='estimate',prior_family='point_normal'))
+plot(out$obj,type='l',ylab='ELBO',xlab='iteration')
+
+plot(x,main='',col='grey80',pch=20)
+lines(log(1+exp(out$m)),col=4)
+legend('topleft',c('data','true mean','estimated mean'),pch=c(20,NA,NA),lty=c(NA,1,1),col=c('grey80','grey50',4))
+```
+
+```{r}
+out$kappa
+out$ebnm_res$fitted_g
+```
+
+Why ELBO is not increasing in this case?
+
+## Point normal prior, mean = 0
+
+```{r,warning=FALSE}
+out = pois_mean_log1exp(x,maxiter = 500,ebnm_params=list(mode=0,prior_family='point_normal'))
+plot(out$obj,type='l',ylab='ELBO',xlab='iteration')
+
+plot(x,main='',col='grey80',pch=20)
+lines(log(1+exp(out$m)),col=4)
+legend('topleft',c('data','true mean','estimated mean'),pch=c(20,NA,NA),lty=c(NA,1,1),col=c('grey80','grey50',4))
+```
+
+```{r}
+out$ebnm_res$fitted_g
+```
 
