--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -12,12 +12,20 @@ editor_options:
 
 ## Normal mean penalty form
 
-1. [bound on (log g)''](bound_log_marginal.html)
-2. [log density of normal mixture](log_gmm_concave.html)
+* [bound on (log g)''](bound_log_marginal.html)
+* [log density of normal mixture](log_gmm_concave.html)
   + [log density of normal mixture, variance ratio](log_gmm_concave_ratio.html)
-3. [log density of laplace mixture](log_lmm_concave.html)
-4. [normal mean penalty plots](normal_mean_penalty.html)
+* [log density of laplace mixture](log_lmm_concave.html)
+* [normal mean penalty plots](normal_mean_penalty.html)
+* [Solve normal mean problem using optimization](normal_mean_penalized_optimization.html)
 
 
+
+## Poisson mean 
+
+* [Poisson mean penalized form](pois_mean_penalized.html)
+* [NB JJ lower bound](neg_binom_mean_lower_bound.html)
+* [NB PG augmentation](neg_binom_mean_polya_gamma.html)
+* [Poisson mean $log(1+exp(\cdot))$ link](pois_mean_log1exp.html)
 
 
