--- a/analysis/normal_mean_penalized_optimization.Rmd
+++ b/analysis/normal_mean_penalized_optimization.Rmd
@@ -88,7 +88,7 @@ w0 = 0.9
 lambda = c(rep(0,round(n*w0)),rep(10,n-round(n*w0)))
 w_true = c(w0,1-w0)
 grid_true = c(0.01,7)
-s = 1
+s = rep(1,n)
 y = rnorm(n,lambda,s)
 library(ashr)
 fit.ash = ashr::ash(y,s,mixcompdist = 'normal')
@@ -193,6 +193,21 @@ f_obj = function(theta,y,s,grid){
   return(res)
 }
 
+#'objective function
+#'@param theta (mu_bar,w)
+#'@param grid prior sds
+f_obj_grad = function(theta,y,s,grid){
+  n = length(y)
+  a = theta[-(1:n)]
+  w = softmax(a)
+  z = theta[1:n]
+  
+  grad_z = (1+s^2*l_nm_d2_z(z,s,w,grid))*(z-y)/s^2
+  grad_a = colSums((s^2*l_nm_d1_z(z,s,w,grid)-y+z)*l_nm_d2_za(z,s,a,grid) - l_nm_d1_a(z,s,a,grid) - s^2*l_nm_d1_z(z,s,w,grid)*l_nm_d2_za(z,s,a,grid))
+
+  return(c(grad_z,c(grad_a)))
+}
+
 ebnm_penalized_compound = function(x,s,grid,z_init = NULL,w_init=NULL,opt_method = 'L-BFGS-B'){
   n = length(x)
   K = length(grid)
@@ -205,7 +220,9 @@ ebnm_penalized_compound = function(x,s,grid,z_init = NULL,w_init=NULL,opt_method
   if(is.null(z_init)){
     z_init = x
   }
-  out = optim(c(z_init,w_init),f_obj,method=opt_method,
+  out = optim(c(z_init,w_init),fn=f_obj,
+              #gr=f_obj_grad,
+              method=opt_method,
               y=y,grid=grid,s=s)
   z = out$par[1:n]
   w = softmax(out$par[-(1:n)])
@@ -240,7 +257,7 @@ fit$opt_res$value
 ploter(fit,y,lambda,main='estimate prior, init z at 0')
 ```
 
-### ash fit
+## ash fit
 
 ```{r,warning=FALSE}
 fit.ash = ash(y,s,mixcompdist = 'normal',pointmass=FALSE,prior='uniform',mixsd=grid)
