remove penalty part

--- a/analysis/log_gmm_concave_ratio.Rmd
+++ b/analysis/log_gmm_concave_ratio.Rmd
@@ -68,7 +68,11 @@ plot_lg_d2 = function(x,w,s2){
 
 ## log concave and variance ratio
 
-Fix $w=(0.5,0.5)$, and smaller variance to be 1. Then vary the larger one from 1.1 to 4. Check $max(\log''(g))$. If it's smaller than 0, the $\log g$ is concave. Then we divide the both variances by 10, so the smaller one is 0.1, and plot the same figure. Finally, we multiply both variances by 10, so the smaller variance is 10, and plot the same figure.
+Fix $w=(0.5,0.5)$, and smaller variance to be 1. Then vary the larger one from 1.1 to 4. Check $max(\log''(g))$. If it's smaller than 0, the $\log g$ is concave. 
+
+Then we divide the both variances by 10, so the smaller one is 0.1, and plot the same figure. 
+
+Finally, we multiply both variances by 10, so the smaller variance is 10, and plot the same figure.
 
 ```{r,fig.width=9,fig.height=3}
 x = seq(-10,10,length.out = 1000)
@@ -102,201 +106,8 @@ plot(s2_list,out,type='l',xlab='ratio',ylab="max(log''(g))")
 abline(h=0,lty=2)
 ```
 
-All lines have the same shape and the intersection points are at the same position. This confirms that with weights fixed, the concavaity is related to the variance ratios.
-
-
-## concavity of the penalty
-
-Now consider the problem $y|\theta\sim N(\theta,1)$, $\theta\sim 0.5\delta_0+0.5N(0,2)$. What does the penalties $\rho(\theta)$ and $\rho(S(\theta))$ look like?
-
-\[c(\theta) = \rho(S(\theta)) = -l_{NM}(\theta;g,s^2)-\frac{(\theta-S_{g,s}(\theta))^2}{2s^2}\]
-
-To evaluate $\rho(\theta)$, we find $z$ such that $S(z) = \theta$ then $\rho(\theta) = \rho(S(z))$.
-
-To determine the convexity, we evaluate the second derivative of $\rho(\cdot)$:
-
-For the compound penalty $c(\theta) = -l(\theta) - \frac{s^2(l'(\theta))^2}{2}$
-
-\[c'(\theta) = -l'(\theta) - s^2l'(\theta)l''(\theta)\]
-
-\[c''(\theta) = -l''(\theta) - s^2(l''(\theta)^2+l'''(\theta)l'(\theta))\]
-
-For the original penalty:
-
-\[\rho''(S(\theta)) = -l''(\theta)/S'(\theta).\]
-
-\[S(\theta) = \theta + s^2l_{NM}'(\theta)\]
-
-\[S'(\theta) = 1 + s^2l_{NM}''(\theta)\]
-
-\[\rho''(S(\theta)) = -l''(\theta)/S'(\theta) = -l''(\theta)/(1+s^2l''(\theta)).\]
-
-To evaluate $\rho''(\theta)$, we find $z$ such that $S(z) = \theta$ then $\rho''(\theta) = \rho''(S(z))$.
-
-```{r}
-#'density of log g(x)
-#'x is a scalar
-lg = function(x,w,s2){
-  return(log(sum(w*dnorm(x,0,sd=sqrt(s2)))))
-}
-
-#'density of log g(x)
-#'x is a vector
-lg_vec = function(x,w,s2){
-  n = length(x)
-  out = rep(0,n)
-  for(i in 1:n){
-    out[i] = lg(x[i],w,s2)
-  }
-  return(out)
-}
-```
-
-```{r}
-library(ashr)
-library(ebnm)
-#g = normalmix(pi = c(0,w),mean=rep(0,K+1),sd = c(0,sqrt(s2)))
-
-
-nm = function(z,g,s){
-  fit = ash(z,s,g = g,fixg = T)
-  return(list(l_nm = fit$loglik, pm=fit$result$PosteriorMean))
-}
-
-penalty = function(theta,g,s){
-  temp = nm(theta,g,s)
-  return(-temp$l_nm - (theta-temp$pm)^2/2/s^2)
-}
-
-penalty_vec = function(x,g,s){
-  n = length(x)
-  out = rep(0,n)
-  for(i in 1:n){
-    out[i] = penalty(x[i],g,s)
-  }
-  return(out)
-}
+All lines have the same shape and the intersection points are at the same position. This confirms that with weights fixed, the concavity is related to the variance ratios.
 
 
 
-
-#'posterior mean operator
-S = function(z,g,s){
-  pw = log(g$pi)+dnorm(z,mean=0,sd=sqrt(s^2+g$sd^2),log=TRUE)
-  pw = pw - max(pw)
-  pw = exp(pw)/sum(exp(pw))
-  pm = z/(1+s^2/g$sd^2)
-  return(sum(pw*pm))
-}
-
-#'Solve S(z) = theta for a given theta
-#'@param theta 
-#'@param g a normalmix object with weights pi and sd
-#'@param s known standard error
-inv_S = function(theta,g,s=1){
-  eqn = function(z,theta,g,s){
-    S(z,g,s) - theta
-  }
-  if(theta==0){
-    sol = 0
-  }else if(theta>0){
-    sol = uniroot(eqn,interval=c(0,theta/min(1/(1+s^2/(g$sd^2+.Machine$double.eps)))),theta=theta,g=g,s=s)$root
-  }else{
-    sol = uniroot(eqn,interval=c(theta/min(1/(1+s^2/(g$sd^2+.Machine$double.eps))),0),theta=theta,g=g,s=s)$root
-  }
-  return(sol)
-}
-
-inv_S_vec = function(x,g,s=1){
-  n = length(x)
-  out = c()
-  for(i in 1:n){
-    out[i] = inv_S(x[i],g,s)
-  }
-  out
-}
-
-```
-
-```{r}
-plot_penalty = function(x,g,s=1){
-  
-  
-  # plot compound penalty
-  compound_penalty = penalty_vec(x,g,s)
-  z = inv_S_vec(x,g,s)
-  original_penalty = penalty_vec(z,g,s)
-  
-  plot(x,compound_penalty,type='l',xlab='theta',ylab='penalty',ylim=range(c(compound_penalty,original_penalty)),
-       main=paste('w=(',paste(g$pi,collapse = ", "),'); sd=(',paste(round(g$sd,2),collapse = ", "),')',sep=''))
-  lines(x,original_penalty,col='blue',lty=2)
-  legend('bottomright',c(expression(rho(S(theta))),expression(rho(theta))),lty=c(1,2),col=c(1,'blue'))
-}
-
-f = expression(log(w1/sqrt((s1_2+s2)*2*pi)*exp(-x^2/2/(s1_2+s2))+w2/sqrt((s2_2+s2)*2*pi)*exp(-x^2/2/(s2_2+s2))))
-f1 = D(f,'x')
-f2 = D(f1,'x')
-f3 = D(f2,'x')
-
-lf_d3 = function(x = seq(-10,10,length.out = 100),
-                     s = 1,
-                     w1 = 1,
-                     s1_2 = 0.1,
-                     s2_2 = 2){
-  s2 = s^2
-  w2 = 1-w1
-  y = eval(f3)
-  y
-}
-
-lf_d2 = function(x = seq(-10,10,length.out = 100),
-                     s = 1,
-                     w1 = 1,
-                     s1_2 = 0.1,
-                     s2_2 = 2){
-  s2 = s^2
-  w2 = 1-w1
-  y = eval(f2)
-  y
-}
-
-lf_d1 = function(x = seq(-10,10,length.out = 100),
-                     s = 1,
-                     w1 = 1,
-                     s1_2 = 0.1,
-                     s2_2 = 2){
-  s2 = s^2
-  w2 = 1-w1
-  y = eval(f1)
-  y
-}
-
-compound_penalty_d2 = function(x,g,s){
-  -lf_d2(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2) - s^2*(lf_d2(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2)^2+lf_d3(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2)*lf_d1(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2))
-}
-
-original_penalty_d2 = function(x,g,s){
-  -lf_d2(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2)/(1+s^2*lf_d2(x,s,g$pi[1],g$sd[1]^2,g$sd[2]^2))
-}
-
-plot_penalty_d2 = function(x,g,s=1){
-  compound_penalty = compound_penalty_d2(x,g,s)
-  z = inv_S_vec(x,g,s)
-  original_penalty = original_penalty_d2(z,g,s)
-  plot(x,compound_penalty,type='l',xlab='theta',ylab='2nd derivative of penalty',ylim=range(c(compound_penalty,original_penalty)),
-       main=paste('w=(',paste(g$pi,collapse = ", "),'); sd=(',paste(round(g$sd,2),collapse = ", "),')',sep=''))
-  lines(x,original_penalty,col='blue',lty=2)
-  abline(h=0,lty=2,col='grey80')
-  legend('topright',c(expression(rho(S(theta))),expression(rho(theta))),lty=c(1,2),col=c(1,'blue'))
-}
-
-```
-
-```{r}
-library(ashr)
-x = seq(-10,10,length.out = 101)
-g = normalmix(pi = c(0.5,0.5),mean=rep(0,2),sd = c(0,sqrt(2)))
-plot_penalty(x,g)
-plot_penalty_d2(x,g)
-```
 
