--- a/analysis/normal_mean_penalty_for_glm.Rmd
+++ b/analysis/normal_mean_penalty_for_glm.Rmd
@@ -86,3 +86,48 @@ plot(theta,pois_penalty(theta,w,grid),type='l',ylab='penalty')
 plot(theta,pois_penalty_grad(theta,w,grid),type='l',ylab='penalty gradient')
 #plot(theta,pois_penalty_hess(theta,w,grid),type='l',ylab='penalty hessian')
 ```
+
+```{r}
+theta = seq(-3,3,length.out = 501)
+w = c(0.99,0.01)
+grid = c(0.01,2)
+par(mfrow=c(1,2))
+plot(theta,pois_penalty(theta,w,grid),type='l',ylab='penalty')
+plot(theta,pois_penalty_grad(theta,w,grid),type='l',ylab='penalty gradient')
+#plot(theta,pois_penalty_hess(theta,w,grid),type='l',ylab='penalty hessian')
+```
+
+
+```{r}
+theta = seq(-3,3,length.out = 501)
+w = c(0.5,0.5)
+grid = c(0.01,2)
+par(mfrow=c(1,2))
+plot(theta,pois_penalty(theta,w,grid),type='l',ylab='penalty')
+plot(theta,pois_penalty_grad(theta,w,grid),type='l',ylab='penalty gradient')
+#plo
+```
+
+What does $S^{-1}_{g,s^2(\theta)}(\theta)$ look like?
+
+```{r}
+par(mfrow=c(1,1))
+theta = seq(-2,4,length.out = 501)
+w = c(0.9,0.1)
+grid = c(0.01,2)
+plot(theta,S_inv(theta,sqrt(exp(-theta)),w,grid,z_range = c(-30,5)),type='l',ylab='z')
+```
+
+```{r}
+theta = seq(-2,4,length.out = 501)
+w = c(0.99,0.01)
+grid = c(0.01,2)
+plot(theta,S_inv(theta,sqrt(exp(-theta)),w,grid,z_range = c(-30,5)),type='l',ylab='z')
+```
+
+```{r}
+theta = seq(-2,4,length.out = 501)
+w = c(0.5,0.5)
+grid = c(0.01,2)
+plot(theta,S_inv(theta,sqrt(exp(-theta)),w,grid,z_range = c(-30,5)),type='l',ylab='z')
+```
